# effing-mad

./: Cargo.toml
effing-macros/: Cargo.toml
effing-macros/src/: lib.rs
examples/: basic.rs  effects_macro.rs  higher_order.rs  nondet.rs  sync_and_async.rs  transform.rs  wondrous.rs
src/: higher_order.rs  injection.rs  lib.rs  macro_impl.rs
src/data/: cons.rs  index.rs  mod.rs  traits.rs  union.rs
src/effects/: future.rs  mod.rs  nondet.rs  state.rs
