[workspace]
members = ["effing-macros"]

[package]
name = "effing-mad"
version = "0.1.0"
description = "The hottest algebraic effects library in Rust."
edition = "2021"
authors = ["Rose Hudson <rose@krx.sh>"]
license = "MIT OR Apache-2.0"

[dependencies]
effing-macros = { path = "effing-macros" }

[dev-dependencies]
# for sync-and-async example
futures = { version = "0.3", default-features = false }
reqwest = { version = "0.11", features = ["blocking"], default-features = false }
tokio = { version = "1.25", features = ["rt"], default-features = false }

[features]
nondet = []
default = ["nondet"]
std = []

[[example]]
name = "nondet"
required-features = ["nondet"]

[package.metadata.docs.rs]
features = ["nondet", "std"]
